--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -13,7 +13,7 @@ html {
 html, body {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
   overflow: hidden;
   overscroll-behavior: none;
   -webkit-tap-highlight-color: transparent;
